--- a/resources/angular-views/partials/header.html
+++ b/resources/angular-views/partials/header.html
@@ -68,7 +68,7 @@
             </li>
 
             <!-- Notifications -->
-            <li ng-show="global.isLocal" class="dropdown">
+            <!-- <li ng-show="global.isLocal" class="dropdown">
                 <a
                     href="javascript:;"
                     class="dropdown-toggle onboarding-general"
@@ -86,12 +86,10 @@
                     class="dropdown-menu with-arrow pull-right panel panel-default"
                     aria-labelledby="menuNotificationsDropdown">
 
-                    <!-- Notifications header -->
                     <div class="panel-heading">
                         You have 2 notifications.
                     </div>
 
-                    <!-- List of notifications -->
                     <ul class="list-group">
                         <li class="list-group-item">
                             <a href="javascript:;" class="media">
@@ -137,14 +135,13 @@
                         </li>
                     </ul>
 
-                    <!-- Notifications footer -->
                     <div class="panel-footer">
                         <a href="javascript:;">
                             Show all notifications.
                         </a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
             <!-- App settings -->
             <li>
