--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -44,6 +44,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href="#/group">
+                        <i class="fa fa-angle-right"></i>
+                        <span>View All Teams</span>
+                    </a>
+                </li>
+                <li>
                     <a href="#/group/create">
                         <i class="fa fa-angle-right"></i>
                         <span>Create a Team</span>
