--- a/resources/assets/sass/partials/_variables.scss
+++ b/resources/assets/sass/partials/_variables.scss
@@ -6,9 +6,12 @@
  */
 
 $green: #45825A;
-$blue: #383d43;
-$blue-dark: #272b2f;
-$orange: #db5031;
+// $blue: #383d43;
+$blue: #343c44;
+// $blue-dark: #272b2f;
+$blue-dark: #1e2730;
+//$orange: #db5031;
+$orange: #fabd39;
 $light-gray: #c1bfc0;
 $yellow: #fef9d9;
 $dark-brown: #503f3c;
@@ -18,7 +21,7 @@ $danger: #db5031;
 $info-alt: #8170ca;
 $heddokogreen: #3bd6b2;
 $silver: #cbd4e3;
-$orangeaccent:#ff8d46;
+$orangeaccent: #ff8d46;
 // $text-color: #767676;
 $text-color: #ddd;
 // $background-color: #f3f3f3;
