--- a/resources/assets/sass/partials/_header.scss
+++ b/resources/assets/sass/partials/_header.scss
@@ -4,7 +4,14 @@
  */
 
 .top-header {
-    background-color: $blue-dark;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+    background-color: transparent;
+    // @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.1));
 
     .clearfix {
         position: relative;
@@ -65,7 +72,6 @@
         margin-top: 3px;
     }
 
-
     .dropdown-menu.panel {
       padding: 0;
       white-space: nowrap;
@@ -107,6 +113,21 @@
             position: absolute !important;
         }
     }
+}
+
+
+.top-header a:hover {
+  text-decoration: none;
+}
+
+.top-header .hidden-mobile {
+  display: none;
+}
+
+@media (min-width: 480px) {
+  .top-header .hidden-mobile {
+    display: inline;
+  }
 }
 
 @media (min-width: 768px) {
