Style + Demo updates

--- a/resources/assets/sass/partials/_variables.scss
+++ b/resources/assets/sass/partials/_variables.scss
@@ -7,9 +7,9 @@
 
 $green: #45825A;
 // $blue: #383d43;
-$blue: #343c44;
+$blue: #2c3a4b;
 // $blue-dark: #272b2f;
-$blue-dark: #1e2730;
+$blue-dark: #1c222c;
 //$orange: #db5031;
 $orange: #fabd39;
 $light-gray: #c1bfc0;
