--- a/resources/angular-views/profile/partials/demo.trends.html
+++ b/resources/angular-views/profile/partials/demo.trends.html
@@ -1,65 +1,58 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div class="row">
-    <div class="col-xs-12">
-        <h2 class="title">
-            Historical Data
-            <span></span>
-        </h2>
-    </div>
-</div>
+<section>
+    <h2 class="title">
+        Historical Data
+        <span></span>
+    </h2>
+    <br>
 
-<div class="row">
-    <div class="col-xs-12">
-        <div
-            theme-morris-chart
-            data-data="comboData"
-            data-type="line"
-            data-xkey="year"
-            data-ykeys='["a", "b", "c"]'
-            data-labels='["Value A", "Value B", "Value C"]'
-            data-line-colors='["#ddd", "#3bd6b2", "#fabd39"]'
-            data-line-width="3">
+    <!-- Trendline -->
+    <div id="chartRow" class="row">
+        <div class="col-xs-12">
+            <theme-chart
+                data-type="Line"
+                data-data="chartjsData"
+                data-options="chartjsOptions"
+                data-width="{{ chartjsWidth() }}"
+                class="demo-chartjs">
+            </theme-chart>
         </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="col-xs-12">
-        <theme-chart
-            data-type="Line"
-            data-data="chartjsLine"
-            data-options="chartjsOptions"
-            class="demo-chartjs"
-            value="myChart">
-        </theme-chart>
-    </div>
-</div>
+    <h2 class="title">
+        Historical Data
+        <span></span>
+    </h2>
+    <br>
 
-<div class="row">
-    <div class="col-sm-12">
-        <div
-            data-flot-chart
-            data-data="trend.data"
-            data-options="trend.options"
-            class="demo-trendline"
-            style="width: 100%; height: 300px;">
+    <!-- Bar chart -->
+    <div class="row">
+        <div class="col-xs-12">
+            <theme-chart
+                data-type="Bar"
+                data-data="chartjsData"
+                data-options="chartjsOptions"
+                data-width="{{ chartjsWidth() }}"
+                class="demo-chartjs">
+            </theme-chart>
         </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="col-sm-12 col-md-6">
-        <canvas
-            data-gauge-chart
-            data-gauge-data="gauge.data"
-            data-gauge-options="gauge.options"
-            style="width: 340px; height: 170px;">
-        </canvas>
+    <!-- TBD -->
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <canvas
+                data-gauge-chart
+                data-gauge-data="gauge.data"
+                data-gauge-options="gauge.options"
+                style="width: 340px; height: 170px;">
+            </canvas>
+        </div>
+
+        <div class="col-sm-12 col-md-6">
+
+        </div>
     </div>
-
-    <div class="col-sm-12 col-md-6">
-
-    </div>
-</div>
+</section>
