--- a/resources/assets/sass/partials/_overlays.scss
+++ b/resources/assets/sass/partials/_overlays.scss
@@ -16,7 +16,8 @@
     bottom: 0;
     right: 0;
     overflow: hidden;
-    background: #eee;
+    // background: #eee;
+    background: $blue;
     z-index: 1000;
     -webkit-perspective: 10000;
     -moz-perspective: 10000;
@@ -36,11 +37,10 @@
 
     .page-loading-escape {
         position: absolute;
-        top: 30px;
-        right: 30px;
-        color: $heddokogreen;
+        top: 50px;
+        right: 50px;
+        color: #bbb;
         display: inline-block;
-        font-size: 32px;
     }
 }
 .page-loading-overlay.loaded,
@@ -53,12 +53,16 @@
     opacity: 0;
     visibility: hidden;
 }
-.load_circle_wrapper{
-    position:absolute;
-    width:100%;
-    text-align:center;
-    top:40%;
+.load_circle_wrapper {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 40%;
     z-index: 1002;
+
+    .fa {
+        color: #bbb;
+    }
 }
 
 /*
