--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -111,6 +111,19 @@ h1.title, h2.title, h3.title {
 }
 
 /*
+ * Angular - Dashboard page.
+ */
+.page.dashboard {
+    height: 100%;
+
+    .dashboard-menu {
+        position: relative;
+        top: 35%;
+        @include transform(translateY(-50%));
+    }
+}
+
+/*
  * Laravel - General styles.
  */
 .inspiring-quote {
