--- a/resources/assets/sass/partials/_variables.scss
+++ b/resources/assets/sass/partials/_variables.scss
@@ -8,6 +8,7 @@
 $green: #45825A;
 // $blue: #383d43;
 $blue: #2c3a4b;
+// $blue: #2c3a46;    /* Latest blue test */
 // $blue-dark: #272b2f;
 $blue-dark: #1c222c;
 //$orange: #db5031;
