--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="col-md-2">
-            <span>122</span>
+            <span>157</span>
             <label># of Throws</label>
         </div>
 
@@ -26,24 +26,51 @@
             <label>Conditions</label>
         </div>
     </div>
+    <br>
 
     <!-- Plot -->
     <div class="row">
-        <div class="col-md-3 qb-icon"></div>
 
-        <div id="chartRow" class="col-md-9">
+        <div class="col-md-9 col-md-offset-3">
+            <h3 class="text-center">
+                Peak Elbow Angular Velocity
+            </h3>
+        </div>
 
-            <h3 class="text-center">Peak Angular Velocity of Elbow</h3>
+        <div class="col-md-3 demo-trends-info-2">
+            <b>Conditions: Sunny, Light Drizzle</b>
+            <br>
+            
+            <b>Wind: 8 km/h</b>
+            <br>
+            <br>
 
-            <theme-chart-timeout
-                data-type="Line"
-                data-data="chartjsData"
-                data-options="chartjsOptions"
-                data-height="300"
-                data-width="{{ chartjsWidth() }}"
-                data-value="chartjsObject"
-                class="demo-chartjs">
-            </theme-chart-timeout>
+            Training Session <i class="fa fa-caret-down"></i>
+            <br>
+
+            January 26, 2016 <i class="fa fa-caret-down"></i>
+            <br>
+
+            <div class="demo-trends-session-legend"></div>
+
+            <div class="row">
+                <div class="col-xs-4 demo-warning" style="height: 70px">
+                </div>
+
+                <div class="col-xs-8">
+                    Throw Count: 157
+                    <br>
+
+                    Recommendation:
+                    <br>
+
+                    <b style="color: #3bd6b2">Stop Athlete's Training</b>
+                </div>
+            </div>
+        </div>
+
+        <div id="chartRow" class="col-md-9 demo-trends-session-plot">
         </div>
     </div>
+
 </section>
