--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -1,75 +1,127 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <section class="demo-trends-section">
     <h2 class="title">
-        QB Training Session
+        Training Session Review
         <span></span>
     </h2>
     <br>
-    <br>
 
-    <!-- Information -->
-    <div class="row demo-trends-info">
-        <div class="col-md-2">
-            <span>Jan 26, 2016</span>
-            <label>Date</label>
-        </div>
+    <span ng-hide="currentSessionTitle == ''">
+        <small class="text-muted">Current Session:</small> {{ currentSessionTitle }}
+    </span>
 
-        <div class="col-md-2">
-            <span>157</span>
-            <label># of Throws</label>
-        </div>
+    <!-- Plots -->
+    <div ng-show="currentSession > 0 && isFetchingSessionData === false">
 
-        <div class="col-md-2">
-            <span>Sunny, Light Drizzle</span>
-            <label>Conditions</label>
-        </div>
-    </div>
-    <br>
+        <!-- Demo plots -->
+        <div class="row">
+            <div class="col-md-9 col-md-offset-3">
+                <h3 class="text-center">
+                    Peak Elbow Angular Velocity
+                </h3>
+            </div>
 
-    <!-- Plot -->
-    <div class="row">
+            <div class="col-md-3 demo-trends-info-2">
+                <b>Conditions: Sunny, Light Drizzle</b>
+                <br>
 
-        <div class="col-md-9 col-md-offset-3">
-            <h3 class="text-center">
-                Peak Elbow Angular Velocity
-            </h3>
-        </div>
+                <b>Wind: 8 km/h</b>
+                <br>
+                <br>
 
-        <div class="col-md-3 demo-trends-info-2">
-            <b>Conditions: Sunny, Light Drizzle</b>
-            <br>
-            
-            <b>Wind: 8 km/h</b>
-            <br>
-            <br>
+                <selectize
+                    ng-model="currentSession"
+                    class="form-control text-center"
+                    config="selectizeConfig"
+                    options="selectizeOptions"
+                    placeholder="Select a session to get started.">
+                </selectize>
+                <br>
 
-            Training Session <i class="fa fa-caret-down"></i>
-            <br>
+                <div class="demo-trends-session-legend" style="height: 100px"></div>
 
-            January 26, 2016 <i class="fa fa-caret-down"></i>
-            <br>
+                <div class="row">
+                    <div class="col-xs-4 demo-warning" style="height: 70px">
+                    </div>
 
-            <div class="demo-trends-session-legend"></div>
+                    <div class="col-xs-8">
+                        Throw Count: 157
+                        <br>
 
-            <div class="row">
-                <div class="col-xs-4 demo-warning" style="height: 70px">
-                </div>
+                        Recommendation:
+                        <br>
 
-                <div class="col-xs-8">
-                    Throw Count: 157
-                    <br>
-
-                    Recommendation:
-                    <br>
-
-                    <b style="color: #3bd6b2">Stop Athlete's Training</b>
+                        <b style="color: #3bd6b2">Stop Athlete's Training</b>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div id="chartRow" class="col-md-9 demo-trends-session-plot">
+            <div id="chartRow" class="col-md-9 demo-trends-session-plot">
+            </div>
+        </div>
+        <br>
+        <br>
+
+        <!-- Fake plots -->
+        <div class="row">
+            <div class="col-md-9">
+                <h3 class="text-center">
+                    Energy Expended
+                </h3>
+
+                <div morris-chart
+                             data-data="fakeData.morris"
+                             data-type="area"
+                             data-xkey="year"
+                             data-ykeys='["a", "b", "c"]'
+                             data-labels='["Value A", "Value B", "Value C"]'
+                             data-line-colors='{{ fakeData.morrisColours }}'
+                             data-line-width="2"
+                             ></div>
+            </div>
+            <div class="col-md-3">
+                <h3 class="text-center">
+                    Energy Expended
+                </h3>
+
+                <canvas
+                    data-gauge-chart
+                    data-gauge-data="fakeData.gauge.data"
+                    data-gauge-options="fakeData.gauge.options"
+                    style="width: 340px; height: 170px;">
+                </canvas>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+
+    </div>
+
+    <!-- Loading data -->
+    <div ng-show="isFetchingSessionData === true" class="row text-center">
+        <i class="fa fa-spinner fa-spin fa-3x" style="display: block; margin: 40px 0"></i>
+    </div>
+
+    <!-- No data selected -->
+    <div ng-show="currentSession === 0 && isFetchingSessionData === false" class="row">
+        <div class="col-md-4 col-md-offset-4" style="margin-bottom: 300px">
+            <selectize
+                ng-model="currentSession"
+                class="form-control text-center"
+                config="selectizeConfig"
+                options="selectizeOptions"
+                placeholder="Select a session to get started.">
+            </selectize>
         </div>
     </div>
 
