--- a/resources/assets/sass/partials/_demo.scss
+++ b/resources/assets/sass/partials/_demo.scss
@@ -6,6 +6,7 @@
 .demo-trends-section {
 
     .demo-trends-info-2 {
+        font-family: 'Proxima Nova Condensed', 'Proxima Nova', sans-serif;
         color: $text-color-blue;
         text-transform: uppercase;
     }
