Working on Rehab screen

--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -31,10 +31,10 @@
             </div>
 
             <div class="col-md-3 demo-trends-info-2">
-                <b>Conditions: Sunny, Light Drizzle</b>
+                Conditions: <b>Sunny, Light Drizzle</b>
                 <br>
 
-                <b>Wind: 8 km/h</b>
+                Wind: <b>8 km/h</b>
                 <br>
                 <br>
 
