Updates for NFL demo

--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -57,7 +57,8 @@
     }
 }
 
-h1.title, h2.title, h3.title {
+h1.title, h2.title, h3.title, h4.title {
+    border-bottom: none;
     @include section-title();
 }
 
