--- a/resources/assets/sass/partials/_animations.scss
+++ b/resources/assets/sass/partials/_animations.scss
@@ -1,17 +1,19 @@
 /**
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
+ * @author  Francis Amankrah (frank@heddoko.com)
  */
 
 @-webkit-keyframes fade-up-enter {
-  0% {
-    opacity: 0;
-    @include transform(translateY(20px));
-  }
-  100% {
-    opacity: 1;
-    @include transform(translateY(0));
-  }
+    0% {
+        opacity: 0;
+        @include transform(translateY(20px));
+    }
+    
+    100% {
+        opacity: 1;
+        @include transform(translateY(0));
+    }
 }
 
 @-moz-keyframes fade-up-enter {
