--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -10,7 +10,7 @@
     <br>
 
     <!-- Demo data -->
-    <div ng-show="session && metric && isFetchingSessionData === false">
+    <div ng-show="session && metric && isFetchingSessionData === false" class="animate-fade-up">
 
         <div class="row">
             <div class="col-md-9 col-md-offset-3">
@@ -138,7 +138,7 @@
     </div>
 
     <!-- Loading data -->
-    <div ng-show="isFetchingSessionData === true" class="row text-center">
+    <div ng-show="isFetchingSessionData === true" class="row text-center animate-fade-up">
         <i class="fa fa-spinner fa-spin fa-5x" style="display: block; margin: 200px 0"></i>
     </div>
 
@@ -146,7 +146,7 @@
     <div ng-show="(!session || !metric) && isFetchingSessionData === false" class="row">
 
         <div class="col-md-12">
-            To get started, please select the training session and metric to be reviewed.
+            Select a training session and metric to get started.
         </div>
         <br>
         <br>
