--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -66,11 +66,11 @@
                 <br>
                 <br>
 
-                <div class="row text-center">
-                    Throw Count Before Degradation: 97
+                <div class="row text-center" style="color: #fabd39;">
+                    Throw Count Before Degradation: <b>97</b>
                 </div>
 
-                <div class="demo-trends-session-legend" style="height: 80px"></div>
+                <!-- <div class="demo-trends-session-legend" style="height: 80px"></div> -->
             </div>
 
 
@@ -115,7 +115,7 @@
 
 
         <!-- Session plots -->
-        <div class="row">
+        <div ng-show="false" class="row">
             <div class="col-md-9">
                 <h3 class="text-center">
                     Energy Expended
