--- a/resources/assets/sass/partials/_demo.scss
+++ b/resources/assets/sass/partials/_demo.scss
@@ -3,6 +3,20 @@
  *
  */
 
+#romPercent {
+    font-size: 3.5em;
+    margin: 40px auto 0;
+    display: block;
+}
+
+.demo-legend-color {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
 .demo-trends-section {
 
     .demo-trends-info-2 {
