updated data for stride length plot

--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -184,6 +184,7 @@
                         data-theme-flot-chart
                         data-data="flotStrideData"
                         data-options="flotStrideOptions"
+                        data-plot-hover="flotStrideHover"
                         style="width: 100%; height: 400px;">
                     </div>
                 </div>
