Updated database + small change to demo plots

--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -93,12 +93,12 @@
                         </div>
                     </div>
 
-                    <div ng-show="metric.title == 'Stride Length'" class="row text-center">
+                    <!-- <div ng-show="false && metric.title == 'Stride Length'" class="row text-center">
                         <div class="col-xs-12">
                             The proper stride length is approximately the athlete’s tibial
                             tuberosity X 1.5, or about 26-30 inches in most quarterbacks.
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
