Bug fixes + added demo profiles

--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -108,6 +108,10 @@ h1.title, h2.title, h3.title, h4.title {
             display: inline-block;
             margin: 5px;
         }
+
+        .has-background {
+            
+        }
     }
 }
 
