--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -141,17 +141,65 @@
             <!-- Metric plots -->
             <div ng-show="isFetchingSelectedMetricData === false">
 
+
                 <!-- Peak Elbow Angular Velocity -->
                 <div ng-show="metric.title == 'Peak Elbow Angular Velocity'" class="col-md-9">
-                    <div
-                        data-theme-flot-chart
-                        data-data="flotElbowVelocityData"
-                        data-options="flotElbowVelocityOptions"
-                        data-plot-hover="flotElbowVelocityHover"
-                        data-plot-labels="flotElbowVelocityLabels"
-                        data-threshold-label="'Pause Training'"
-                        style="width: 100%; height: 400px;">
+                    <div ng-show="session.id === 5">
+                        <div
+                            data-theme-flot-chart
+                            data-data="flotElbowData[4]"
+                            data-options="flotElbowOptions[4]"
+                            data-plot-hover="flotElbowHover"
+                            data-plot-labels="flotElbowLabels[4]"
+                            data-threshold-label="'Pause Training'"
+                            style="width: 100%; height: 400px;">
+                        </div>
                     </div>
+                    <div ng-show="session.id === 4">
+                        <div
+                            data-theme-flot-chart
+                            data-data="flotElbowData[3]"
+                            data-options="flotElbowOptions[3]"
+                            data-plot-hover="flotElbowHover"
+                            data-plot-labels="flotElbowLabels[3]"
+                            data-threshold-label="'Pause Training'"
+                            style="width: 100%; height: 400px;">
+                        </div>
+                    </div>
+                    <div ng-show="session.id === 3">
+                        <div
+                            data-theme-flot-chart
+                            data-data="flotElbowData[2]"
+                            data-options="flotElbowOptions[2]"
+                            data-plot-hover="flotElbowHover"
+                            data-plot-labels="flotElbowLabels[2]"
+                            data-threshold-label="'Pause Training'"
+                            style="width: 100%; height: 400px;">
+                        </div>
+                    </div>
+                    <div ng-show="session.id === 2">
+                        <div
+                            data-theme-flot-chart
+                            data-data="flotElbowData[1]"
+                            data-options="flotElbowOptions[1]"
+                            data-plot-hover="flotElbowHover"
+                            data-plot-labels="flotElbowLabels[1]"
+                            data-threshold-label="'Pause Training'"
+                            style="width: 100%; height: 400px;">
+                        </div>
+                    </div>
+                    <div ng-show="session.id === 1">
+                        <div
+                            data-theme-flot-chart
+                            data-data="flotElbowData[0]"
+                            data-options="flotElbowOptions[0]"
+                            data-plot-hover="flotElbowHover"
+                            data-plot-labels="flotElbowLabels[0]"
+                            data-threshold-label="'Pause Training'"
+                            style="width: 100%; height: 400px;">
+                        </div>
+                    </div>
+
 
                     <div class="row text-center">
                         <div class="col-md-4" style="margin-top: 30px">
@@ -161,8 +209,8 @@
                                 </h4>
                                 <canvas
                                     data-gauge-chart
-                                    data-gauge-data="elbowVelocityMaxGauge.data"
-                                    data-gauge-options="elbowVelocityMaxGauge.options"
+                                    data-gauge-data="elbowMaxGauge.data"
+                                    data-gauge-options="elbowMaxGauge.options"
                                     style="width: 100%; vertical-align: bottom">
                                 </canvas>
 
@@ -179,8 +227,8 @@
                                 </h4>
                                 <canvas
                                     data-gauge-chart
-                                    data-gauge-data="elbowVelocityAvgGauge.data"
-                                    data-gauge-options="elbowVelocityAvgGauge.options"
+                                    data-gauge-data="elbowAvgGauge.data"
+                                    data-gauge-options="elbowAvgGauge.options"
                                     style="width: 100%; vertical-align: bottom">
                                 </canvas>
 
@@ -189,6 +237,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-md-4" style="margin-top: 30px">
                             <div class="col-md-10">
                                 <h4 style="display: inline-block">
@@ -196,8 +245,8 @@
                                 </h4>
                                 <canvas
                                     data-gauge-chart
-                                    data-gauge-data="elbowVelocityMinGauge.data"
-                                    data-gauge-options="elbowVelocityMinGauge.options"
+                                    data-gauge-data="elbowMinGauge.data"
+                                    data-gauge-options="elbowMinGauge.options"
                                     style="width: 100%; vertical-align: bottom">
                                 </canvas>
 
