Final modifications for NFL demo

--- a/resources/assets/sass/directives/ui-editable-fields.scss
+++ b/resources/assets/sass/directives/ui-editable-fields.scss
@@ -60,3 +60,7 @@ $font-size-smaller: 0.7em;
 .ui-editable-fields-muted {
     color: $muted-color;
 }
+
+.ui-editable-list-container {
+    margin-bottom: 15px;
+}
