--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -49,7 +49,9 @@
                         <span>View All Teams</span>
                     </a>
                 </li>
-                <li>
+
+                <!-- Disabled until we're sure we only need the "modal" form on the group listing page -->
+                <li ng-show="false">
                     <a href="#/group/create">
                         <i class="fa fa-angle-right"></i>
                         <span>Create a Team</span>
