--- a/resources/angular-views/profile/partials/demo-session.html
+++ b/resources/angular-views/profile/partials/demo-session.html
@@ -16,6 +16,10 @@
             <div class="col-md-9 col-md-offset-3">
                 <h3 class="text-center" style="margin-bottom: 35px">
                     {{ metric.title }}
+
+                    <small ng-show="metric.title == 'Shoulder External Rotation'" style="display: block; margin-top: 5px">
+                        100% = 90&deg;
+                    </small>
                 </h3>
             </div>
 
