--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -26,10 +26,10 @@
         background-color: $color;
     }
 }
-.page > header {
+.page > header, section > header {
     margin: 0 20px 20px 0;
 
-    h1 {
+    h1, h2, h3 {
         @include section-title();
     }
 
@@ -110,7 +110,7 @@ h1.title, h2.title, h3.title, h4.title {
         }
 
         .has-background {
-            
+
         }
     }
 }
